--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "myapp",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,8 +12,10 @@
     "ajv": "^8.11.0",
     "ajv-formats": "^2.1.1",
     "body-parser": "^1.20.0",
+    "date-fns": "^2.30.0",
     "express": "^4.18.1",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.5.0"
-  }
+  },
+  "description": ""
 }
