--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "body-parser": "^1.20.0",
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
+    "sqlite": "^5.0.1",
+    "sqlite3": "^5.1.6",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.5.0"
   },
